--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -46,6 +46,9 @@
 	<!-- ==================================================== -->
 	
 	<target name="-version">
+		<tstamp>
+			<format property="current.time" pattern="yyyyMMddhhmmss" />
+		</tstamp>
 		<loadproperties srcfile="${manifest}">
 			<filterchain>
 				<linecontains>
@@ -53,11 +56,13 @@
 				</linecontains>
 				<tokenfilter>
 					<replaceregex pattern="^Bundle-Version: d*.d*.d*s*$" replace="" />
+					<replaceregex pattern="qualifier" replace="${current.time}"/>
 				</tokenfilter>
 			</filterchain>
 		</loadproperties>
 		<property name="plugin" value="${plugin-name}${Bundle-Version}.jar"/>
 		<echo message="Version: ${Bundle-Version}"/>
+		<echo message="Bundle:  ${plugin}"/>
 	</target>
 
 	<target name="clean" depends="-version">
