* Build Qualifier korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@495 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -47,7 +47,7 @@
 	
 	<target name="-version">
 		<tstamp>
-			<format property="current.time" pattern="yyyyMMddhhmmss" />
+			<format property="current.time" pattern="yyyyMMddhhmm" />
 		</tstamp>
 		<loadproperties srcfile="${manifest}">
 			<filterchain>
