* reihenfolge geändert und korrekt benannt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@504 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/de.itemis.jee.releng/pom.xml
+++ b/Updatesite/de.itemis.jee.releng/pom.xml
@@ -2,7 +2,7 @@
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<name>JEE7 DSL Releng</name>
+	<name>JEE  DSL Releng</name>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.itemis.jee</groupId>
 	<artifactId>de.itemis.jee.releng</artifactId>
@@ -19,14 +19,14 @@
 	</properties>
 
 	<modules>
-		<module>../../JEE7/de.itemis.jee7</module>
-		<module>../../JEE7/de.itemis.jee7.ui</module>
-		<module>../../JEE7/de.itemis.jee7.feature</module>
-		<module>../../JEE7/de.itemis.jee7.doc</module>
 		<module>../../JEE6/de.itemis.jee6</module>
 		<module>../../JEE6/de.itemis.jee6.ui</module>
-		<module>../../JEE6/de.itemis.jee6.feature</module>
 		<module>../../JEE6/de.itemis.jee6.doc</module>
+		<module>../../JEE6/de.itemis.jee6.feature</module>
+		<module>../../JEE7/de.itemis.jee7</module>
+		<module>../../JEE7/de.itemis.jee7.ui</module>
+		<module>../../JEE7/de.itemis.jee7.doc</module>
+		<module>../../JEE7/de.itemis.jee7.feature</module>
 		<module>../de.itemis.jee.updatesite</module>
 	</modules>
 
