--- a/JEE6/de.itemis.jee6.dbauth/.classpath
+++ b/JEE6/de.itemis.jee6.dbauth/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
