--- a/JEE6/de.itemis.jee6.ui/build.xml
+++ b/JEE6/de.itemis.jee6.ui/build.xml
@@ -47,7 +47,7 @@
 	
 	<target name="-version">
 		<tstamp>
-			<format property="current.time" pattern="yyyyMMddhhmm" />
+			<format property="current.time" pattern="yyyyMMddHHmm" />
 		</tstamp>
 		<loadproperties srcfile="${manifest}">
 			<filterchain>
