--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -53,7 +53,7 @@
 
 	<target name="-version">
 		<tstamp>
-			<format property="current.time" pattern="yyyyMMddhhmm" />
+			<format property="current.time" pattern="yyyyMMddHHmm" />
 		</tstamp>
 		<loadproperties srcfile="META-INF/MANIFEST.MF">
 			<filterchain>
