--- a/JEE7/de.itemis.jee7.dbauth/.classpath
+++ b/JEE7/de.itemis.jee7.dbauth/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="res/WEB-INF/lib/jee7-utils.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee7.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
