--- a/Website/de.itemis.jee6.website/.project
+++ b/Website/de.itemis.jee6.website/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.itemis.jee6.website</name>
+	<name>de.itemis.jee.website</name>
 	<comment></comment>
 	<projects>
 	</projects>
