--- a/Website/de.itemis.jee6.xdoc/.project
+++ b/Website/de.itemis.jee6.xdoc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.itemis.jee6.xdoc</name>
+	<name>de.itemis.jee.xdoc</name>
 	<comment></comment>
 	<projects>
 	</projects>
