--- a/Updatesite/de.itemis.jee.updatesite/pom.xml
+++ b/Updatesite/de.itemis.jee.updatesite/pom.xml
@@ -58,7 +58,7 @@
 							<siteTemplateFolder>templates</siteTemplateFolder>
 							<!-- Symbols are used while expanding index.html template -->
 							<symbols>
-								<update.site.name>JEE6 Generator Repository</update.site.name>
+								<update.site.name>JEE Generators Repository</update.site.name>
 								<update.site.description>This URL can be used inside eclipse for
 									installing new software.</update.site.description>
 								<update.site.version>${project.version}</update.site.version>
