* Release JEE 6 - 1.1.9 und JEE 7 - 1.0.1
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@524 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/de.itemis.jee7.feature/pom.xml
+++ b/JEE7/de.itemis.jee7.feature/pom.xml
@@ -13,4 +13,6 @@
   <packaging>eclipse-feature</packaging>
 
   <name>JEE7 DSL Feature</name>
+  <groupId>de.itemis.jee7</groupId>
+  <version>1.0.1</version>
 </project>
