* itemis xtext updatesite
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@525 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/de.itemis.jee.releng/pom.xml
+++ b/Updatesite/de.itemis.jee.releng/pom.xml
@@ -255,6 +255,11 @@
 					<layout>p2</layout>
 					<url>http://oaw.sourceforge.net/updates/</url>
 				</repository>
+				<repository> 
+					<id>xtext</id> 
+					<layout>p2</layout> 
+					<url>http://download.itemis.com/updates/</url> 
+				</repository> 
 			</repositories>
 			<build>
 				<plugins>
@@ -316,6 +321,11 @@
 					<layout>p2</layout>
 					<url>http://oaw.sourceforge.net/updates/</url>
 				</repository>
+				<repository> 
+					<id>xtext</id> 
+					<layout>p2</layout> 
+					<url>http://download.itemis.com/updates/</url> 
+				</repository> 
 			</repositories>
 			<build>
 				<plugins>
