--- a/Updatesite/de.itemis.jee.updatesite/pom.xml
+++ b/Updatesite/de.itemis.jee.updatesite/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>de.itemis.jee.updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
 
-	<name>JEE  DSL Update Site</name>
+	<name>JEE DSL Update Site</name>
 
 	<build>
 		<plugins>
@@ -66,8 +66,8 @@
 							</symbols>
 							<!-- <p2StatsUrl>http://server.org/url/where/to/push/stats</p2StatsUrl> -->
 							<associateSites>
-								<site>http://download.eclipse.org/releases/kepler</site>
-								<site>http://download.eclipse.org/rmf/updates/</site>
+<!-- 								<site>http://download.eclipse.org/releases/kepler</site> -->
+<!-- 								<site>http://download.eclipse.org/rmf/updates/</site> -->
 								<site>http://oaw.sourceforge.net/updates/</site>
 								<site>http://download.itemis.com/updates/releases/2.0.0/</site>
 							</associateSites>
@@ -77,4 +77,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.0.0</version>
 </project>
