--- a/JEE6/de.itemis.jee6.ui/plugin.xml
+++ b/JEE6/de.itemis.jee6.ui/plugin.xml
@@ -197,10 +197,18 @@
       </category>
       <wizard
             category="de.itemis.jee.ui.category"
-            class="de.itemis.jee6.ui.DslExecutableExtensionFactory:de.itemis.jee6.ui.wizard.DslNewProjectWizard"
+            class="de.itemis.jee6.ui.DslExecutableExtensionFactory:de.itemis.jee6.ui.wizard.Jee6MavenNewProjectWizard"
             icon="icons/jee6_32.gif"
             id="de.itemis.jee6.ui.wizard.DslNewProjectWizard"
             name="Maven based JEE6 Generator Project"
+            project="true">
+      </wizard>
+      <wizard
+            category="de.itemis.jee.ui.category"
+            class="de.itemis.jee6.ui.DslExecutableExtensionFactory:de.itemis.jee6.ui.wizard.Jee6AntNewProjectWizard"
+            icon="icons/jee6_32.gif"
+            id="de.itemis.jee6.ui.wizard.DslNewProjectWizard"
+            name="Ant based JEE6 Generator Project"
             project="true">
       </wizard>
    </extension>
