--- a/JEE7/de.itemis.jee7.ui/plugin.xml
+++ b/JEE7/de.itemis.jee7.ui/plugin.xml
@@ -195,10 +195,10 @@
 		</category>
 		<wizard
 			category="de.itemis.jee.ui.category"
-			class="de.itemis.jee7.ui.DslExecutableExtensionFactory:de.itemis.jee7.ui.wizard.DslNewProjectWizard"
+			class="de.itemis.jee7.ui.DslExecutableExtensionFactory:de.itemis.jee7.ui.wizard.Jee6AntNewProjectWizard"
 			icon="icons/jee7_32.gif"
 			id="de.itemis.jee7.ui.wizard.DslNewProjectWizard"
-			name="JEE7 Generator Project"
+			name="JEE7 Generator Project (Ant based)"
 			project="true">
 		</wizard>
 	</extension>
