--- a/JEE6/de.itemis.jee6.feature/pom.xml
+++ b/JEE6/de.itemis.jee6.feature/pom.xml
@@ -13,5 +13,5 @@
   <packaging>eclipse-feature</packaging>
 
   <name>JEE6 DSL Feature</name>
-  <version>1.1.10-SNAPSHOT</version>
+  <version>1.1.10</version>
 </project>
