* URL der Updatesite korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@573 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/de.itemis.jee.kepler.product/pom.xml
+++ b/Updatesite/de.itemis.jee.kepler.product/pom.xml
@@ -127,7 +127,7 @@
 									<updatesite url="http://download.itemis.com/updates/releases/" />
 
 									<!-- JEE6 Generator -->
-									<updatesite url="http://jee-generator.de/updates/kepler/" />
+									<updatesite url="http://www.jee-generator.de/updates/kepler/" />
 									<installunit name="de.itemis.jee6.feature.feature.group" />
 									<installunit name="de.itemis.jee7.feature.feature.group" />
 								</builder>
