--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -142,6 +142,7 @@
 			<junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
 				<classpath refid="junit.path" />
 				<formatter type="xml"/>
+				<test name="de.itemis.jee6.test.HexadecimalTest"/>
 				<test name="de.itemis.jee6.test.Base64Test"/>
 				<test name="de.itemis.jee6.test.DigestTest"/>
 				<test name="de.itemis.jee6.test.UtilTest"/>
