* Hexadecimal Coder ergänzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@583 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/de.itemis.jee7.util/build.xml
+++ b/JEE7/de.itemis.jee7.util/build.xml
@@ -143,6 +143,7 @@
 			<junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
 				<classpath refid="junit.path" />
 				<formatter type="xml"/>
+				<test name="de.itemis.jee7.test.HexadecimalTest"/>
 				<test name="de.itemis.jee7.test.Base64Test"/>
 				<test name="de.itemis.jee7.test.DigestTest"/>
 				<test name="de.itemis.jee7.test.UtilTest"/>
