--- a/JEE6/de.itemis.jee6.util/pom.xml
+++ b/JEE6/de.itemis.jee6.util/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>de.itemis.jee6</groupId>
 	<artifactId>de.itemis.jee6.utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.12-SNAPSHOT</version>
+	<version>1.1.12</version>
 	<name>jee6-utils</name>
 
 	<properties>
@@ -82,7 +82,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.4.201312101107</version>
+				<version>0.7.2.201409121644</version>
 				<executions>
 					<execution>
 						<id>jacoco-initialize</id>
