--- a/JEE7/de.itemis.jee7.feature/pom.xml
+++ b/JEE7/de.itemis.jee7.feature/pom.xml
@@ -14,5 +14,5 @@
 
   <name>JEE7 DSL Feature</name>
   <groupId>de.itemis.jee7</groupId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
 </project>
