--- a/JEE6/de.itemis.jee6/pom.xml
+++ b/JEE6/de.itemis.jee6/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>de.itemis.jee6</artifactId>
 	<groupId>de.itemis.jee6</groupId>
 	<packaging>eclipse-plugin</packaging>
-	<version>1.1.11</version>
+	<version>1.1.12-SNAPSHOT</version>
 	
 	<build>
 		<resources>
