--- a/Website/de.itemis.jee.websitenew/_config.yml
+++ b/Website/de.itemis.jee.websitenew/_config.yml
@@ -5,9 +5,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Die JEE-Generatoren sind in der Lage, eine komplette JEE-Web-Applikation (Java EE 6 oder Java EE 7) aus einem einfachen Modell zu generieren.
   Das Framework wurde mit Xtext realisiert und ist als Eclipse-Plugin verfügbar. Für Java EE 6 und Java EE 7 stehen getrennte Plugins zur Verfügung.
 
-baseurl: "/Xtext" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 
-url: "http://jee-generator.de" # the base hostname & protocol for your site
+url: "http://www.jee-generator.de" # the base hostname & protocol for your site
 encoding: UTF-8
 
 # Build settings
@@ -37,11 +37,6 @@ src:
   gef: "https://github.com/eclipse/gef/blob/master"
 
 javadoc:
-  utils6: "http://jee-generator.de/javadoc/jee6"
-  utils7: "http://jee-generator.de/javadoc/jee7"
-  eclipse-platform: "http://help.eclipse.org/luna/topic/org.eclipse.platform.doc.isv/reference/api"
-  eclipse-jdt: "http://help.eclipse.org/luna/topic/org.eclipse.jdt.doc.isv/reference/api"
-  java: "http://docs.oracle.com/javase/8/docs/api"
+  utils6: "http://www.jee-generator.de/javadoc/jee6"
+  utils7: "http://www.jee-generator.de/javadoc/jee7"
   javaee: "http://docs.oracle.com/javaee/5/api"
-  junit: "http://junit.sourceforge.net/javadoc"
-  guice: "https://google.github.io/guice/api-docs/latest/javadoc"
