* update der seite
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@618 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/_config.yml
+++ b/Website/de.itemis.jee.websitenew/_config.yml
@@ -40,3 +40,6 @@ javadoc:
   utils6: "http://www.jee-generator.de/javadoc/jee6"
   utils7: "http://www.jee-generator.de/javadoc/jee7"
   javaee: "http://docs.oracle.com/javaee/5/api"
+
+sass:
+  sass_dir: _sass
