--- a/Updatesite/de.itemis.jee.luna.product/pom.xml
+++ b/Updatesite/de.itemis.jee.luna.product/pom.xml
@@ -31,7 +31,7 @@
 		<eclipsesdk.linux32.filename>eclipse-jee-${eclipse.version}-linux-gtk</eclipsesdk.linux32.filename>
 		<eclipsesdk.linux>${eclipse.server}${eclipsesdk.linux.filename}.tar.gz</eclipsesdk.linux>
 		<eclipsesdk.linux.filename>eclipse-jee-${eclipse.version}-linux-gtk-x86_64</eclipsesdk.linux.filename>
-		<eclipse.version>luna-SR1</eclipse.version>
+		<eclipse.version>luna-SR2</eclipse.version>
 		<appname>jee-generator</appname>
 	</properties>
 
@@ -39,7 +39,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<version>${antrun-version}</version>
 				<executions>
 					<execution>
 						<id>default-cli</id>
