--- a/Website/de.itemis.jee.websitenew/_config.yml
+++ b/Website/de.itemis.jee.websitenew/_config.yml
@@ -15,6 +15,7 @@ markdown: kramdown
 
 kramdown:
   input: GFM
+  hard_wrap:     false
   #auto_ids:       true
   footnote_nr:    1
   entity_output:  as_char
