--- a/JEE6/de.itemis.jee6.ui/pom.xml
+++ b/JEE6/de.itemis.jee6.ui/pom.xml
@@ -43,8 +43,8 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>de.itemis.jee6</groupId>
-									<artifactId>de.itemis.jee6.utils</artifactId>
+									<groupId>org.jeegen.jee6</groupId>
+									<artifactId>org.jeegen.jee6.utils</artifactId>
 									<version>1.1.10</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
