* ändern der Javadoc links
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@690 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jeegen.website/_config.yml
+++ b/Website/de.itemis.jeegen.website/_config.yml
@@ -38,8 +38,8 @@ src:
   gef: "https://github.com/eclipse/gef/blob/master"
 
 javadoc:
-  utils6: "http://www.jee-generator.de/javadoc/jee6"
-  utils7: "http://www.jee-generator.de/javadoc/jee7"
+  utils6: "http://jee-generator.org/javadoc/jee7/"
+  utils7: "http://jee-generator.org/javadoc/jee7/"
   javaee: "http://docs.oracle.com/javaee/5/api"
 
 sass:
