--- a/JEE6/de.itemis.jee6.ui/pom.xml
+++ b/JEE6/de.itemis.jee6.ui/pom.xml
@@ -45,7 +45,7 @@
 								<artifactItem>
 									<groupId>org.jeegen.jee6</groupId>
 									<artifactId>org.jeegen.jee6.utils</artifactId>
-									<version>1.1.10</version>
+									<version>1.1.14-SNAPSHOT</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/resources</outputDirectory>
