--- a/JEE7/de.itemis.jee7.ui/pom.xml
+++ b/JEE7/de.itemis.jee7.ui/pom.xml
@@ -45,7 +45,7 @@
 								<artifactItem>
 									<groupId>org.jeegen.jee7</groupId>
 									<artifactId>org.jeegen.jee7.utils</artifactId>
-									<version>1.0.3</version>
+									<version>1.0.4-SNAPSHOT</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/resources</outputDirectory>
