* fix utils dependecy
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@699 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/de.itemis.jee7.ui/pom.xml
+++ b/JEE7/de.itemis.jee7.ui/pom.xml
@@ -43,8 +43,8 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>org.jeegen.jee7</groupId>
-									<artifactId>org.jeegen.jee7.utils</artifactId>
+									<groupId>org.jeegen</groupId>
+									<artifactId>jee7.utils</artifactId>
 									<version>1.0.4-SNAPSHOT</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
