--- a/JEE6/org.jeegen.jee6.util/pom.xml
+++ b/JEE6/org.jeegen.jee6.util/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jeegen.jee6</groupId>
+	<groupId>org.jeegen</groupId>
 	<artifactId>org.jeegen.jee6.utils</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.14-SNAPSHOT</version>
