--- a/JEE7/org.jeegen.jee7.util/pom.xml
+++ b/JEE7/org.jeegen.jee7.util/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jeegen</groupId>
-	<artifactId>org.jeegen.jee7.utils</artifactId>
+	<artifactId>jee7.utils</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.7-SNAPSHOT</version>
 	<name>jee7-utils</name>
