* Toplevel Domain von de auf org geändert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@703 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/de.itemis.jee.luna.product/pom.xml
+++ b/Updatesite/de.itemis.jee.luna.product/pom.xml
@@ -126,8 +126,8 @@
 									<!-- Xtext Extensions -->
 									<updatesite url="http://download.itemis.com/updates/releases/" />
 
-									<!-- JEE6 Generator -->
-									<updatesite url="http://www.jee-generator.de/updates/luna/" />
+									<!-- Java EE Generators -->
+									<updatesite url="http://www.jee-generator.org/updates/luna/" />
 									<installunit name="de.itemis.jee6.feature.feature.group" />
 									<installunit name="de.itemis.jee7.feature.feature.group" />
 								</builder>
