--- a/Updatesite/de.itemis.jee.kepler.product/pom.xml
+++ b/Updatesite/de.itemis.jee.kepler.product/pom.xml
@@ -126,8 +126,8 @@
 									<!-- Xtext Extensions -->
 									<updatesite url="http://download.itemis.com/updates/releases/" />
 
-									<!-- JEE6 Generator -->
-									<updatesite url="http://www.jee-generator.de/updates/kepler/" />
+									<!-- Java EE Generators -->
+									<updatesite url="http://www.jee-generator.org/updates/kepler/" />
 									<installunit name="de.itemis.jee6.feature.feature.group" />
 									<installunit name="de.itemis.jee7.feature.feature.group" />
 								</builder>
