* JEE-Utils auf Sourceforge verschoben und Builds angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@707 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/de.itemis.jee.releng/pom.xml
+++ b/Updatesite/de.itemis.jee.releng/pom.xml
@@ -48,6 +48,7 @@
 				<version>${tycho-version}</version>
 				<extensions>true</extensions>
 			</plugin>
+<!--
 			<plugin>
 				<groupId>de.itemis.signing</groupId>
 				<artifactId>itemis-jarsigner</artifactId>
@@ -66,6 +67,7 @@
 					</execution>
 				</executions>
 			</plugin>
+-->
 			<plugin>
 				<!-- See https://github.com/jbosstools/jbosstools-maven-plugins/wiki 
 					for documentation -->
@@ -225,6 +227,10 @@
 		<repository>
 			<id>projects</id>
 			<url>https://projects.itemis.de/nexus/content/groups/ejb3/</url>
+		</repository>
+		<repository>
+			<id>jeegen.sf.net</id>
+			<url>http://www.jee-generator.org/maven/</url>
 		</repository>
 	</repositories>
 
