--- a/JEE6/org.jeegen.jee6.util/pom.xml
+++ b/JEE6/org.jeegen.jee6.util/pom.xml
@@ -128,7 +128,15 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.8</version>
+			</extension>
+		</extensions>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -156,12 +164,8 @@
 
 	<distributionManagement>
 		<repository>
-			<id>ejb3-releases</id>
-			<url>https://projects.itemis.de/nexus/content/repositories/ejb3-releases/</url>
+			<id>jeegen.sf.net</id>
+			<url>sftp://web.sourceforge.net/home/project-web/jeegen/htdocs/maven</url>
 		</repository>
-		<snapshotRepository>
-			<id>ejb3-snapshot</id>
-			<url>https://projects.itemis.de/nexus/content/repositories/ejb3-snapshot/</url>
-		</snapshotRepository>
 	</distributionManagement>
 </project>
