* Release der JEE-Utils angelegt und Version Bump durchgezogen.  * Website-Projekt auf org.jeegen umbenannt.  * Updatesite-Projekte auf org.jeegen umbenannt.  * doc-Plugins gelöscht und aus Feature-Dependencies entfernt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@709 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6/pom.xml
+++ b/JEE6/de.itemis.jee6/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>de.itemis.jee</groupId>
-		<artifactId>de.itemis.jee.releng</artifactId>
+		<groupId>org.jeegen</groupId>
+		<artifactId>releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+		<relativePath>../../Updatesite/org.jeegen.releng/pom.xml</relativePath>
 	</parent>
 
 	<name>JEE6 DSL</name>
