--- a/Updatesite/org.jeegen.releng/.project
+++ b/Updatesite/org.jeegen.releng/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.itemis.jee.luna.product</name>
+	<name>org.jeegen.releng</name>
 	<comment></comment>
 	<projects>
 	</projects>
