--- a/JEE6/de.itemis.jee6.feature/pom.xml
+++ b/JEE6/de.itemis.jee6.feature/pom.xml
@@ -3,10 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.itemis.jee</groupId>
-		<artifactId>de.itemis.jee.releng</artifactId>
+		<groupId>org.jeegen</groupId>
+		<artifactId>releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+		<relativePath>../../Updatesite/org.jeegen.releng/pom.xml</relativePath>
 	</parent>
 
   <artifactId>de.itemis.jee6.feature</artifactId>
