--- a/JEE6/de.itemis.jee6.ui/pom.xml
+++ b/JEE6/de.itemis.jee6.ui/pom.xml
@@ -4,10 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>de.itemis.jee</groupId>
-		<artifactId>de.itemis.jee.releng</artifactId>
+		<groupId>org.jeegen</groupId>
+		<artifactId>releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+		<relativePath>../../Updatesite/org.jeegen.releng/pom.xml</relativePath>
 	</parent>
 
 	<name>JEE6 DSL UI</name>
@@ -45,7 +45,7 @@
 								<artifactItem>
 									<groupId>org.jeegen</groupId>
 									<artifactId>jee6.utils</artifactId>
-									<version>1.1.14-SNAPSHOT</version>
+									<version>1.1.14</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/resources</outputDirectory>
