--- a/Updatesite/org.jeegen.kepler.product/pom.xml
+++ b/Updatesite/org.jeegen.kepler.product/pom.xml
@@ -3,35 +3,35 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.itemis.jee</groupId>
-		<artifactId>de.itemis.jee.releng</artifactId>
+		<groupId>org.jeegen</groupId>
+		<artifactId>releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../de.itemis.jee.releng/pom.xml</relativePath>
+		<relativePath>../org.jeegen.releng/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>de.itemis.jee6.product</artifactId>
+	<artifactId>jee6.product</artifactId>
 
 	<name>JEE DSL Product</name>
 
 	<properties>
-		<eclipse.server>https://master.itemis.de/software/Eclipse/4.4/</eclipse.server>
+		<eclipse.server>https://master.itemis.de/software/Eclipse/4.3/</eclipse.server>
 		<ftp.server>mirror.netcologne.de</ftp.server>
 		<ftp.path>eclipse/eclipse/downloads/drops4/S-4.3RC3-201305301430</ftp.path>
 		<ftp.director.path>eclipse/tools/buckminster/products</ftp.director.path>
 
 		<eclipsesdk.osx32>${eclipse.server}${eclipsesdk.osx32.filename}.tar.gz</eclipsesdk.osx32>
-		<eclipsesdk.osx32.filename>eclipse-jee-${eclipse.version}-macosx-cocoa</eclipsesdk.osx32.filename>
+		<eclipsesdk.osx32.filename>eclipse-SDK-${eclipse.version}-macosx-cocoa</eclipsesdk.osx32.filename>
 		<eclipsesdk.osx>${eclipse.server}${eclipsesdk.osx.filename}.tar.gz</eclipsesdk.osx>
-		<eclipsesdk.osx.filename>eclipse-jee-${eclipse.version}-macosx-cocoa-x86_64</eclipsesdk.osx.filename>
+		<eclipsesdk.osx.filename>eclipse-SDK-${eclipse.version}-macosx-cocoa-x86_64</eclipsesdk.osx.filename>
 		<eclipsesdk.windows32>${eclipse.server}${eclipsesdk.windows32.filename}.zip</eclipsesdk.windows32>
-		<eclipsesdk.windows32.filename>eclipse-jee-${eclipse.version}-win32</eclipsesdk.windows32.filename>
+		<eclipsesdk.windows32.filename>eclipse-SDK-${eclipse.version}-win32</eclipsesdk.windows32.filename>
 		<eclipsesdk.windows>${eclipse.server}${eclipsesdk.windows.filename}.zip</eclipsesdk.windows>
-		<eclipsesdk.windows.filename>eclipse-jee-${eclipse.version}-win32-x86_64</eclipsesdk.windows.filename>
+		<eclipsesdk.windows.filename>eclipse-SDK-${eclipse.version}-win32-x86_64</eclipsesdk.windows.filename>
 		<eclipsesdk.linux32>${eclipse.server}${eclipsesdk.linux32.filename}.tar.gz</eclipsesdk.linux32>
-		<eclipsesdk.linux32.filename>eclipse-jee-${eclipse.version}-linux-gtk</eclipsesdk.linux32.filename>
+		<eclipsesdk.linux32.filename>eclipse-SDK-${eclipse.version}-linux-gtk</eclipsesdk.linux32.filename>
 		<eclipsesdk.linux>${eclipse.server}${eclipsesdk.linux.filename}.tar.gz</eclipsesdk.linux>
-		<eclipsesdk.linux.filename>eclipse-jee-${eclipse.version}-linux-gtk-x86_64</eclipsesdk.linux.filename>
-		<eclipse.version>luna-SR2</eclipse.version>
+		<eclipsesdk.linux.filename>eclipse-SDK-${eclipse.version}-linux-gtk-x86_64</eclipsesdk.linux.filename>
+		<eclipse.version>4.3.2</eclipse.version>
 		<appname>jee-generator</appname>
 	</properties>
 
@@ -39,7 +39,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>${antrun-version}</version>
+				<version>1.7</version>
 				<executions>
 					<execution>
 						<id>default-cli</id>
@@ -54,12 +54,12 @@
 								<mkdir dir="builder" />
 								<mkdir dir="repos/shared" />
 								<!-- KEPLER DEVELOPER IDE -->
-								<mkdir dir="targets/4.4/macosx/x86" />
-								<mkdir dir="targets/4.4/macosx/x86_64" />
-								<mkdir dir="targets/4.4/win32/x86_64" />
-								<mkdir dir="targets/4.4/win32/x86" />
-								<mkdir dir="targets/4.4/linux/x86" />
-								<mkdir dir="targets/4.4/linux/x86_64" />
+								<mkdir dir="targets/4.3/macosx/x86" />
+								<mkdir dir="targets/4.3/macosx/x86_64" />
+								<mkdir dir="targets/4.3/win32/x86_64" />
+								<mkdir dir="targets/4.3/win32/x86" />
+								<mkdir dir="targets/4.3/linux/x86" />
+								<mkdir dir="targets/4.3/linux/x86_64" />
 
 								<get
 									src="http://${ftp.server}/${ftp.director.path}/director_latest.zip"
@@ -74,23 +74,23 @@
 								<!-- FETCH BASE DISTROS -->
 								<!-- OSX -->
 								<get src="${eclipsesdk.osx}"
-									dest="targets/4.4/macosx/x86_64/eclipse-jee-${eclipse.version}-macosx-cocoa-x86_64.tar.gz"
+									dest="targets/4.3/macosx/x86_64/eclipse-SDK-${eclipse.version}-macosx-cocoa-x86_64.tar.gz"
 									skipexisting="true" />
 								<get src="${eclipsesdk.osx32}"
-									dest="targets/4.4/macosx/x86/eclipse-jee-${eclipse.version}-macosx-cocoa.tar.gz"
+									dest="targets/4.3/macosx/x86/eclipse-SDK-${eclipse.version}-macosx-cocoa.tar.gz"
 									skipexisting="true" />
 								<!-- Windows -->
 								<get src="${eclipsesdk.windows}"
-									dest="targets/4.4/win32/x86_64/eclipse-jee-${eclipse.version}-win32-x86_64.zip"
+									dest="targets/4.3/win32/x86_64/eclipse-SDK-${eclipse.version}-win32-x86_64.zip"
 									skipexisting="true" />
-								<get src="${eclipsesdk.windows32}" dest="targets/4.4/win32/x86/eclipse-jee-${eclipse.version}-win32.zip"
+								<get src="${eclipsesdk.windows32}" dest="targets/4.3/win32/x86/eclipse-SDK-${eclipse.version}-win32.zip"
 									skipexisting="true" />
 								<!-- Linux -->
 								<get src="${eclipsesdk.linux32}"
-									dest="targets/4.4/linux/x86_64/eclipse-jee-${eclipse.version}-linux-gtk.tar.gz"
+									dest="targets/4.3/linux/x86_64/eclipse-SDK-${eclipse.version}-linux-gtk.tar.gz"
 									skipexisting="true" />
 								<get src="${eclipsesdk.linux}"
-									dest="targets/4.4/linux/x86_64/eclipse-jee-${eclipse.version}-linux-gtk-x86_64.tar.gz"
+									dest="targets/4.3/linux/x86_64/eclipse-SDK-${eclipse.version}-linux-gtk-x86_64.tar.gz"
 									skipexisting="true" />
 
 
@@ -103,7 +103,7 @@
 									version="${project.version}">
 
 									<updatesite
-										url="https://builds.itemis.de/nexus/content/repositories/luna/" />
+										url="https://builds.itemis.de/nexus/content/repositories/kepler/" />
 
 									<!-- Eclipse Platform -->
 									<installunit name="org.eclipse.egit.feature.group" />
@@ -115,37 +115,37 @@
 									<installunit name="org.eclipse.emf.mwe.sdk.feature.group" />
 
 									<!-- Xtext, MWE2 -->
-									<updatesite
-										url="https://builds.itemis.de/nexus/content/repositories/eclipse-modeling/" />
+									<updatesite url="https://builds.itemis.de/nexus/content/repositories/eclipse-modeling/" />
+<!--
 									<installunit name="org.eclipse.emf.mwe2.language.sdk.feature.group" />
 									<installunit name="org.eclipse.emf.mwe2.runtime.sdk.feature.group" />
 									<installunit name="org.eclipse.xtext.sdk.feature.group" />
 									<installunit name="org.eclipse.xtext.xtend2.sdk.feature.group" />
 									<installunit name="org.eclipse.xtext.xtend2.m2e.feature.group" />
-
+-->
 									<!-- Xtext Extensions -->
 									<updatesite url="http://download.itemis.com/updates/releases/" />
 
 									<!-- Java EE Generators -->
-									<updatesite url="http://www.jee-generator.org/updates/luna/" />
+									<updatesite url="http://www.jee-generator.org/updates/kepler/" />
 									<installunit name="de.itemis.jee6.feature.feature.group" />
 									<installunit name="de.itemis.jee7.feature.feature.group" />
 								</builder>
 								<!-- Linux -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.linux.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-linux-gtk-x86_64.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-linux-gtk-x86_64.tar.gz" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.linux32.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-linux-gtk.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-linux-gtk.tar.gz" />
 								<!-- Windows -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.windows.filename}-${appname}-${project.version}.zip"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-win32-x86_64.zip" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-win32-x86_64.zip" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.windows32.filename}-${appname}-${project.version}.zip"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-win32.zip" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-win32.zip" />
 								<!-- OSX -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.osx.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-macosx-cocoa-x86_64.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-macosx-cocoa-x86_64.tar.gz" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.osx32.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee-generator-luna-macosx-cocoa.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee-generator-kepler-macosx-cocoa.tar.gz" />
 							</target>
 						</configuration>
 					</execution>
