--- a/Updatesite/org.jeegen.updatesite/pom.xml
+++ b/Updatesite/org.jeegen.updatesite/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../de.itemis.jee.releng/pom.xml</relativePath>
-		<groupId>de.itemis.jee</groupId>
-		<artifactId>de.itemis.jee.releng</artifactId>
+		<relativePath>../org.jeegen.releng/pom.xml</relativePath>
+		<groupId>org.jeegen</groupId>
+		<artifactId>releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>de.itemis.jee.updatesite</artifactId>
+	<artifactId>updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
 
 	<name>JEE  DSL Update Site</name>
