--- a/Website/org.jeegen.website/.project
+++ b/Website/org.jeegen.website/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.itemis.jee.kepler.product</name>
+	<name>org.jeegen.website</name>
 	<comment></comment>
 	<projects>
 	</projects>
