--- a/JEE7/org.jeegen.jee7/about.properties
+++ b/JEE7/org.jeegen.jee7/about.properties
@@ -1,6 +1,6 @@
 blurb=JEE7-Generator\n\
 \n\
-Copyright (C) 2014 itemis AG.\n\
+Copyright (C) 2015 Steffen A. Mork and Dominik Pieper.\n\
 \n\
 This program and the accompanying materials are made available\n\
 under the terms of the Eclipse Public License v1.0.
