--- a/JEE6/org.jeegen.jee6.util/pom.xml
+++ b/JEE6/org.jeegen.jee6.util/pom.xml
@@ -25,8 +25,8 @@
 
 	<licenses>
 		<license>
-			<name>EPL License</name>
-			<url>http://opensource.org/licenses/EPL-1.0</url>
+			<name>Eclipse Public License</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
 		</license>
 	</licenses>
 
