--- a/JEE7/org.jeegen.jee7.tests/pom.xml
+++ b/JEE7/org.jeegen.jee7.tests/pom.xml
@@ -13,6 +13,26 @@
 	<groupId>de.itemis.jee6</groupId>
 	<packaging>eclipse-test-plugin</packaging>
 
+	<developers>
+		<developer>
+			<name>Steffen Mork</name>
+			<email>info@jee-generator.org</email>
+			<url>http://morknet.de</url>
+		</developer>
+		<developer>
+			<name>Dominik Pieper</name>
+			<email>info@jee-generator.org</email>
+			<url>http://pieperhome.de</url>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>Eclipse Public License</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
+		</license>
+	</licenses>
+
 	<build>
 		<plugins>
 			<plugin>
