--- a/JEE6/org.jeegen.jee6.ui/pom.xml
+++ b/JEE6/org.jeegen.jee6.ui/pom.xml
@@ -16,6 +16,26 @@
 	<artifactId>org.jeegen.jee6.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
+	<developers>
+		<developer>
+			<name>Steffen Mork</name>
+			<email>info@jee-generator.org</email>
+			<url>http://morknet.de</url>
+		</developer>
+		<developer>
+			<name>Dominik Pieper</name>
+			<email>info@jee-generator.org</email>
+			<url>http://pieperhome.de</url>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>Eclipse Public License</name>
+			<url>http://www.eclipse.org/legal/epl-v10.html</url>
+		</license>
+	</licenses>
+
 	<build>
 		<plugins>
 			<plugin>
