* Feature IDs für JEE7 korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@717 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Updatesite/org.jeegen.mars.product/pom.xml
+++ b/Updatesite/org.jeegen.mars.product/pom.xml
@@ -133,7 +133,7 @@
 									<!-- Java EE Generators -->
 									<updatesite url="http://www.jee-generator.org/updates/mars/" />
 									<installunit name="org.jeegen.jee6.feature.feature.group" />
-									<installunit name="de.itemis.jee7.feature.feature.group" />
+									<installunit name="org.jeegen.jee7.feature.feature.group" />
 								</builder>
 
 								<!-- Linux -->
